Bug 8812 - Stray ``Signal Stop Print ...'' line
Summary: Stray ``Signal Stop Print ...'' line
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: unknown
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-07-12 19:58 UTC by ac131313
Modified: 2008-12-31 01:42 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ac131313 2004-07-12 19:58:01 UTC
[Converted from Gnats 1707]

See the below:

(gdb) PASS: gdb.base/signals.exp: handle multiple SIGs via integer range
handle SIGINT nopass
SIGINT is used by the debugger.
Are you sure you want to change it? (y or n) n
Not confirmed, unchanged.
Signal        Stop      Print   Pass to program Description
(gdb) 

Notice the stray ``Signal  Stop ...'' line

Release:
2004-07-12

Environment:
All
Comment 1 Sourceware Commits 2008-12-31 01:34:22 UTC
Subject: Bug 8812

CVSROOT:	/cvs/src
Module name:	src
Changes by:	palves@sourceware.org	2008-12-31 01:34:10

Modified files:
	gdb            : ChangeLog infrun.c 
	gdb/testsuite  : ChangeLog 
	gdb/testsuite/gdb.base: signals.exp 

Log message:
	2008-12-31  Pedro Alves  <pedro@codesourcery.com>
	
	PR gdb/8812:
	* infrun.c (handle_command): Don't print a header or notify the
	target about signal changes if we didn't change any signal.
	
	2008-12-31  Pedro Alves  <pedro@codesourcery.com>
	
	PR gdb/8812:
	* gdb.base/signal.exp: Change kfail to fail, and update PR number.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gdb/ChangeLog.diff?cvsroot=src&r1=1.10056&r2=1.10057
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gdb/infrun.c.diff?cvsroot=src&r1=1.347&r2=1.348
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gdb/testsuite/ChangeLog.diff?cvsroot=src&r1=1.1781&r2=1.1782
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gdb/testsuite/gdb.base/signals.exp.diff?cvsroot=src&r1=1.14&r2=1.15

Comment 2 Pedro Alves 2008-12-31 01:42:35 UTC
Fix checked in.